# TurmaFasb

./: .gitignore  CMakeLists.txt  TurmaFasb.xdk  TurmaFasbBancoDeDadosModelo.mwb  mentor_sql_server_odbc.dsn  mentos_sql_server_odbc.dsn
src/: basesync.cpp  basesync.h  main.cpp  optionsargs.h  servermanager.cpp  servermanager.h  util.hpp
src/controller/: arquivocontroller.cpp  arquivocontroller.h  controllerbase.cpp  controllerbase.h  homecontroller.cpp  homecontroller.h  logincontroller.cpp  logincontroller.h  materiacontroller.cpp  materiacontroller.h  recadocontroller.cpp  recadocontroller.cpp.qc5812  recadocontroller.h
src/entity/: arquivo.cpp  arquivo.h  materia.cpp  materia.h  materiahasrecado.cpp  materiahasrecado.h  materiahasusuario.cpp  materiahasusuario.h  nota.cpp  nota.h  recado.cpp  recado.h  recadohasmateria.cpp  recadohasmateria.h  recadohasusuario.cpp  recadohasusuario.h  usuario.cpp  usuario.h
src/model/: arquivomodel.cpp  arquivomodel.h  loginmodel.cpp  loginmodel.h  materiamodel.cpp  materiamodel.h  model.cpp  model.h  recadomodel.cpp  recadomodel.h
src/repository/: arquivorepository.cpp  arquivorepository.h  materiahasrecadorepository.cpp  materiahasrecadorepository.h  materiahasusuariorepository.cpp  materiahasusuariorepository.h  materiarepository.cpp  materiarepository.h  notarepository.cpp  notarepository.h  recadohasmateriarepository.cpp  recadohasmateriarepository.h  recadohasusuariorepository.cpp  recadohasusuariorepository.h  recadorepository.cpp  recadorepository.h  repository.cpp  repository.h  usuariorepository.cpp  usuariorepository.h
www/: index.html  login.html  materia.html
www/css/: app.css
www/js/: enviaRecebeServidor.js  index.js  login.js  materia.js
